FIX: Visible "skip navigation" link on some themes
Move this further out of the window. Some themes add `position: relative`
to the `#main` element, which caused this to show for all users.

--- a/app/assets/stylesheets/common/base/discourse.scss
+++ b/app/assets/stylesheets/common/base/discourse.scss
@@ -884,7 +884,7 @@ table {
 a#skip-link {
   padding: 0.25em 0.5em;
   position: absolute;
-  top: -40px;
+  top: -200px;
   left: 1em;
   color: var(--secondary);
   background: var(--tertiary);
